src/theme/utilities.scss
@import 'sizing.scss';

// DISPLAY
$displays: (
  'none': none,
  'block': block,
  'flex': flex,
  'inline': inline,
);

@each $display, $display-value in $displays {
  .u-display--#{$display} {
    display: $display-value;
  }
}

.u-flex-direction--row {
  flex-direction: row;
}

.u-flex-direction--column {
  flex-direction: column;
}

.u-flex-align--center {
  align-items: center;
}

.u-flex-align--start {
  align-items: flex-start;
}

.u-flex-align--end {
  align-items: flex-end;
}

$justifies: (
  'around': space-around,
  'between': space-between,
  'center': center,
  'end': flex-end,
  'start': flex-start,
);

@each $justify, $justify-value in $justifies {
  .u-flex-justify--#{$justify} {
    justify-content: $justify-value;
  }
}

.u-flex-shrink--none {
  flex-shrink: 0;
}

.u-flex-grow {
  flex-grow: 1;
}

.u-flex-expand {
  flex: 1 !important;

  &--2 {
    flex: 2 !important;
  }

  &--3 {
    flex: 3 !important;
  }

  &--6 {
    flex: 6 !important;
  }
}

// POSITION
.u-relative {
  position: relative;
}

.u-zindex {
  z-index: 2;
}

// FONT
.u-text-align--center {
  text-align: center;
}

.u-text-align--left {
  text-align: left;
}

.u-text-align--right {
  text-align: right;
}

$weights: (
  'regular': 400,
  'medium': 500,
  'semibold': 600,
  'bold': 700,
);

@each $weight, $weight-value in $weights {
  .u-font-weight--#{$weight} {
    font-weight: $weight-value;
  }
}

.u-font-style--italic {
  font-style: italic;
}

.u-text-decoration--underline {
  text-decoration: underline;
}

.u-text-decoration--none {
  text-decoration: none;
}

$transformers: (
  'none': none,
  'uppercase': uppercase,
  'lowercase': lowercase,
  'capitalize': capitalize,
);

@each $transform, $transform-value in $transformers {
  .u-text-transform--#{$transform} {
    text-transform: $transform-value;
  }
}

$font-sizes: (
  'xs': var(--text-xs),
  'sm': var(--text-sm),
  'md': var(--text-md),
  'lg': var(--text-lg),
  'xl': var(--text-xl),
  'regular': var(--text-regular),
);

.u-line-height--label {
  line-height: normal;
}

.u-text-ellipsis,
.u-text-ellipsis--short {
  display: box;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.u-text-ellipsis--short {
  -webkit-line-clamp: 1;
}

@each $font-size, $font-size-value in $font-sizes {
  .u-font-size--#{$font-size} {
    font-size: $font-size-value;
  }
}

// WIDTH, MAX WIDTH
$widths: (
  '10': 10%,
  '25': 25%,
  '33': 33.3%,
  '50': 50%,
  '66': 66.6%,
  '75': 75%,
  '90': 90%,
  '100': 100%,
);

@each $width, $width-value in $widths {
  .u-width--#{$width} {
    width: $width-value;
  }

  .u-max-width--#{$width} {
    max-width: $width-value;
  }
}

.u-height--100 {
  height: 100%;
}

// CURSOR
.u-cursor--clickable {
  cursor: pointer;
}

// MARGIN AND PADDING
$sizes: (
  'xxs': var(--space-xxs),
  'xs': var(--space-xs),
  'sm': var(--space-sm),
  'md': var(--space-md),
  'lg': var(--space-lg),
  'xl': var(--space-xl),
  'xxl': var(--space-xxl),
  'auto': auto,
  'none': 0,
);
$directions: 'left', 'right', 'top', 'bottom';

@each $size, $size-value in $sizes {
  .u-margin--#{$size} {
    margin: $size-value !important;
  }

  @if ($size !='auto') {
    .u-padding--#{$size} {
      padding: $size-value !important;
    }
  }

  @each $direction in $directions {
    .u-margin-#{$direction}--#{$size} {
      margin-#{$direction}: $size-value !important;
    }

    @if ($size !='auto') {
      .u-padding-#{$direction}--#{$size} {
        padding-#{$direction}: $size-value !important;
      }
    }
  }
}

@each $direction in $directions {
  .u-margin-#{$direction} {
    margin-#{$direction}: var(--space-regular) !important;
  }

  .u-padding-#{$direction} {
    padding-#{$direction}: var(--space-regular) !important;
  }
}

